Salesforce Project/force-app/main/default/objects/Inventory__c/Inventory__c.object-meta.xml
<CustomObject>
    <description>Manages milk and dairy product inventory, including quantity, type, price, and storage location. Tracks which inventory items are linked to distributors for sales and delivery.</description>
    <label>Inventory</label>
    <nameField>
        <label>Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>