Salesforce Project/force-app/main/default/objects/Inventory__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>Expiry date of the product.</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>