Salesforce Project/force-app/main/default/objects/Inventory__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Name of the product</description>
    <label>Product Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Milk</fullName>
            </value>
            <value>
                <fullName>Butter</fullName>
            </value>
            <value>
                <fullName>Cheese</fullName>
            </value>
            <value>
                <fullName>Paneer</fullName>
            </value>
            <value>
                <fullName>Curd</fullName>
            </value>
            <value>
                <fullName>Lussi</fullName>
            </value>
            <value>
                <fullName>Ghee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>