Salesforce Project/force-app/main/default/objects/Inventory__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quantity</label>
    <type>Checkbox</type>
</CustomField>