Salesforce Project/force-app/main/default/objects/Inventory__c/fields/Quantity_Avaliable__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Avaliable__c</fullName>
    <label>Quantity Avaliable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>