Salesforce Project/force-app/main/default/objects/Inventory__c/fields/Thresholds__c.field-meta.xml
<CustomField>
    <fullName>Thresholds__c</fullName>
    <label>Thresholds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>