Salesforce Project/force-app/main/default/objects/Inventory__c/validationRules/Expiry_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiry_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Expiry_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Expiry_Date__c</errorDisplayField>
    <errorMessage>Expiry Date must be in the future.</errorMessage>
</ValidationRule>