Salesforce Project/force-app/main/default/objects/Inventory__c/validationRules/Stock_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Stock_Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity_Avaliable__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Quantity_Avaliable__c</errorDisplayField>
    <errorMessage>Stock quantity cannot be negative.</errorMessage>
</ValidationRule>